[CLOSA] [FE] fixing bugs 1. add props children at the button component 2.  reformat and fixing Foote Component 3. update style input js 4. reformat text and update html structure in home component 5.  update style card by reduce flex basis to 70% and set hover underline 6 update style for footer by reduce flex basis and set hover underline 5. fixings scroll double scroll type 6. update variable in scss variable

--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -37,7 +37,7 @@
                 &:nth-child(1){
                     flex-basis: 75%;
                     @include breakpoint(desktop){
-                        flex-basis: 70%;
+                        flex-basis: 50%;
                         align-self: center;
                     }
                 }
@@ -54,6 +54,9 @@
                 line-height: 22px;
                 text-align: center;  
                 position: relative;
+                &:hover{
+                    text-decoration: underline;
+                }
             }
         }
     }
